# solo-leveling-gateway-api/src/main/resources/openapi.yml
@@ -91,6 +91,38 @@ paths:
               schema:
                 $ref: '#/components/schemas/GetUserResponse'
 
+  /api/v1/user/locale:
+    get:
+      tags:
+        - user
+      summary: Get current user's locale (from JWT)
+      operationId: getUserLocale
+      responses:
+        '200':
+          description: Current user locale
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserLocaleResponse'
+    put:
+      tags:
+        - user
+      summary: Manual update current user's locale (from JWT)
+      operationId: updateUserLocale
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserLocaleRequest'
+      responses:
+        '200':
+          description: Current user locale
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserLocaleResponse'
+
   # =============== PLAYER ===============
   /api/v1/player/{playerId}/topics:
     get:
@@ -218,6 +250,14 @@ components:
           description: The refresh token to use for generating a new access token
       description: Request body for refreshing the access token
 
+    UpdateUserLocaleRequest:
+      type: object
+      required:
+        - locale
+      properties:
+        locale:
+          type: string
+
     SavePlayerTopicsRequest:
       type: object
       required:
@@ -273,6 +313,16 @@ components:
       properties:
         user:
           $ref: '#/components/schemas/User'
+
+    UserLocaleResponse:
+      type: object
+      required:
+        - user
+      properties:
+        locale:
+          type: string
+        isManual:
+          type: boolean
 
     GetPlayerTopicsResponse:
       type: object
