# solo-leveling-gateway-service/src/main/kotlin/com.sleepkqq.sololeveling/gateway/controller/UserController.kt
@@ -2,11 +2,15 @@ package com.sleepkqq.sololeveling.gateway.controller
 
 import com.sleepkqq.sololeveling.gateway.api.UserApi
 import com.sleepkqq.sololeveling.gateway.dto.RestGetUserResponse
+import com.sleepkqq.sololeveling.gateway.dto.RestUpdateUserLocaleRequest
+import com.sleepkqq.sololeveling.gateway.dto.RestUserLocaleResponse
 import com.sleepkqq.sololeveling.gateway.grpc.client.UserGrpcApi
 import com.sleepkqq.sololeveling.gateway.mapper.ProtoMapper
 import com.sleepkqq.sololeveling.gateway.service.auth.AuthService
+import jakarta.validation.Valid
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
+import java.util.Locale
 
 @Suppress("unused")
 @RestController
@@ -31,5 +35,22 @@ class UserController(
 		val response = RestGetUserResponse()
 			.user(protoMapper.map(user))
 		return ResponseEntity.ok(response)
+	}
+
+	override fun getUserLocale(): ResponseEntity<RestUserLocaleResponse> {
+		val currentUser = authService.getCurrentUser()
+
+		val response = userGrpcApi.getUserLocale(currentUser.id)
+		return ResponseEntity.ok(protoMapper.map(response))
+	}
+
+	override fun updateUserLocale(request: @Valid RestUpdateUserLocaleRequest):
+			ResponseEntity<RestUserLocaleResponse> {
+
+		val currentUser = authService.getCurrentUser()
+
+		val locale = Locale.forLanguageTag(request.locale)
+		val response = userGrpcApi.updateUserLocale(currentUser.id, locale)
+		return ResponseEntity.ok(protoMapper.map(response))
 	}
 }
